icon list gap issue with columns and mobile

--- a/src/blocks/column/editor.scss
+++ b/src/blocks/column/editor.scss
@@ -11,6 +11,7 @@
 	margin-right: auto;
 	margin-top: 0px;
     margin-bottom: 0px;
+	width: 100%;
 }
 .wp-block-kadence-column > .kadence-inner-column-direction-vertical.kadence-inner-column-vertical-align-middle {
 	display: flex;
